//import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'org.cadixdev.licenser' version '0.6.1'
}

group 'be.jorisg.ultrastarorganizer'
version '2.1'

repositories {
    mavenCentral()

    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
    maven { url 'https://jitpack.io' }

    flatDir {
        dirs 'libs'
    }
}

dependencies {
    implementation 'info.picocli:picocli:4.6.3'
    implementation 'info.picocli:picocli-shell-jline3:4.6.3'
    implementation 'org.jline:jline:3.22.0'
    implementation 'org.fusesource.jansi:jansi:2.4.0'

    implementation 'me.tongfei:progressbar:0.9.3'

    implementation 'commons-io:commons-io:2.15.1'
    implementation 'org.apache.commons:commons-csv:1.4'
//    implementation 'org.apache.any23:apache-any23-encoding:1.1'
    implementation 'org.apache.commons:commons-text:1.11.0'
    implementation 'com.ibm.icu:icu4j-charset:74.2'

    implementation 'org.jetbrains:annotations:24.1.0'

    implementation 'org.odftoolkit:odfdom-java:0.8.7'
    implementation 'org.json:json:20220320'
    implementation 'se.michaelthelin.spotify:spotify-web-api-java:7.1.0'
    implementation 'com.github.sealedtx:java-youtube-downloader:3.2.3'

    implementation 'ws.schild:jave-core:3.3.1'
    implementation 'ws.schild:jave-nativebin-win64:3.3.1'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'be.jorisg.ultrastarorganizer.UltrastarOrganizer'
        )
    }
    from 'LICENSE.txt'
}

license {
    header = project.file('HEADER.txt')
    include '**/*.java'
}

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

shadowJar {
    archiveClassifier = ''
}
